unpackaged/main/default/objects/GIACTInquiryError__c/GIACTInquiryError__c.object-meta.xml
<CustomObject>
    <label>GIACT Inquiry Error</label>
    <nameField>
        <displayFormat>GERR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GIACT Inquiry Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>