unpackaged/main/default/objects/GIACTInquiryError__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <defaultValue>&quot;GIACT&quot;</defaultValue>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Systems</fullName>
            </value>
            <value>
                <fullName>GIACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>