unpackaged/main/default/objects/GIACTInquiryError__c/fields/FailureTitle__c.field-meta.xml
<CustomField>
    <fullName>FailureTitle__c</fullName>
    <label>Failure Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>