unpackaged/main/default/objects/GIACTInquiryError__c/fields/Giact_Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Giact_Error_Detail__c</fullName>
    <label>Giact Error Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>