unpackaged/main/default/objects/GIACTInquiryError__c/fields/GIACTInquiryResponse__c.field-meta.xml
<CustomField>
    <fullName>GIACTInquiryResponse__c</fullName>
    <label>GIACT Inquiry Response</label>
    <referenceTo>GiactInquiryResponse__c</referenceTo>
    <relationshipLabel>GIACT Inquiry Errors</relationshipLabel>
    <relationshipName>GIACT_Inquiry_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>